--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://appdown.0615yx.com/jiusheng/IOS/IPA0613/jiusheng.ipa</string>
+					<string>http://appdown.jnhongchuang.com/jiusheng/IOS/IPA0613/jiusheng.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://appdown.0615yx.com/jiusheng/IOS/57.png</string>
+					<string>http://appdown.jnhongchuang.com/jiusheng/IOS/57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://appdown.0615yx.com/jiusheng/IOS/512.png</string>
+					<string>http://appdown.jnhongchuang.com/jiusheng/IOS/512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
